Prevent integrations UIs from displaying a horizontal scrollbar when using full width inputs

--- a/stylesheets/_component.piano.scss
+++ b/stylesheets/_component.piano.scss
@@ -98,6 +98,10 @@ $piano-bg: #fafafa;
     clear: both;
     padding: $padding-base;
 
+    .nav-inline {
+        margin: 0 0 0 -20px;
+    }
+
     .is-selected & {
         margin-top: $margin-base;
 
